Atualização Controller-Requisicao: Actions:Aprovar, Rejeitar, Excluir View - Estoque(index), Requisicao(index), Requisicao(Pedido), _Layout, Usuario(index)

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<EstoqueModel>
 @{
-    ViewBag.Subtitulo = "Estoque";
+    ViewBag.Subtitulo = "Stock";
 }
 
 <header class="d-flex justify-content-between align-items-center">
