--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -2,7 +2,7 @@
 @inject UserManager<ColaboradorModel> _userManager
 @{
     var usuarioLog = await _userManager.GetUserAsync(Context.User);
-    ViewBag.Subtitulo = "Listagem de Colaboradores";
+    ViewBag.Subtitulo = "Listagem de Utilizadores";
 
 
 
