--- a/Views/Requisicao/Pedido.cshtml
+++ b/Views/Requisicao/Pedido.cshtml
@@ -25,7 +25,7 @@
                 <th>Produto</th>
                 <th>Quantidade</th>
                 <th>Preço</th>
-                <th>Colaborador</th>
+                <th>Utilizador</th>
                 <th></th>
             </tr>
         </thead>
@@ -40,7 +40,12 @@
                         <td>@requisicao.ProdutoName.ResumoName()</td>
                         <td>@requisicao.Quantidade</td>
                         <td>@requisicao.ValorTotal.ToString("C2", CultureInfo.CreateSpecificCulture("pt-PT"))</td>
-                        <td><a asp-action="Index" asp-route-id="@requisicao.IdColaborador">@requisicao.ColabName</a></td>
+                        <td>
+                            <b>
+                                <a asp-action="Index" asp-route-id="@requisicao.IdColaborador"
+                                class="text-decoration-none">@requisicao.ColabName</a>
+                            </b>
+                        </td>
 
                         <td>
                             <a asp-action="Detalhes" asp-route-id="@requisicao.IdRequisicao" class="btn btn-sm btn-primary"><i
@@ -52,7 +57,7 @@
                         class="bi-x" title="Rejeitar"></i></a>
                         </td>
                     </tr>
-                    
+
                 }
             }
         </tbody>
