--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,14 +18,13 @@
 
     var opRequisicao = (actionAtual == "Index" && controllerAtual == "Requisicao") ? "active" : "";
     var opRequisicaoPend = (actionAtual == "Pedido" && controllerAtual == "Requisicao") ? "active" : "";
-
+    
     var menu = controllerAtual == "Produto" ? "active" : "";
 
     var administradores = ViewData["Administradores"] as IEnumerable<string>;
     var coordenadores = ViewData["Coordenadores"] as IEnumerable<string>;
     var usuarioLog = await _userManager.GetUserAsync(Context.User);
 
-    var isId = User.IsInRole("colaborador") ? "usuarioLog.Id" : "";
 }
 
 <!DOCTYPE html>
@@ -60,7 +59,8 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item col">
-                                <a class="nav-link @menuUsuario" asp-controller="Usuario" asp-action="Index">Usuários</a>
+                                <a class="nav-link @menuUsuario" asp-controller="Usuario"
+                                asp-action="Index">Utilizadores</a>
                             </li>
 
                             @if (User.IsInRole("administrador"))
@@ -78,30 +78,31 @@
                                 </li>
                             }
                             <li class="nav-item col">
-                                <a class="nav-link @menuEstoque" asp-controller="Estoque" asp-action="Index">Estoque</a>
+                                <a class="nav-link @menuEstoque" asp-controller="Estoque" asp-action="Index">Stock</a>
                             </li>
                             <li class="nav-item col">
-                                @if (User.IsInRole("administrador") || User.IsInRole("coordenador"))
-                                {
-                                    <div class="dropdown">
-                                        <a class="nav-link dropdown-toggle @menuRequisicao " href="#" role="button"
+
+                                <div class="dropdown">
+                                    <a class="nav-link dropdown-toggle @menuRequisicao " href="#" role="button"
                                     id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                                            Requisição
-                                        </a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <li><a class="dropdown-item @opRequisicao" asp-controller="Requisicao"
-                                            asp-action="Index" asp-route-id=@isId>Requisições</a></li>
+                                        Requisição
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        @if (!User.IsInRole("administrador"))
+                                        {
+                                            <a class="dropdown-item @opRequisicao" asp-controller="Requisicao"
+                                        asp-action="Index" asp-route-id="@usuarioLog.Id">Requisições</a>
+                                        }
+
+                                        @if (User.IsInRole("administrador") || User.IsInRole("coordenador"))
+                                        {
                                             <li><a class="dropdown-item @opRequisicaoPend" asp-controller="Requisicao"
                                             asp-action="Pedido">Requisições Pendentes</a></li>
-                                        </ul>
-                                    </div>
-                                }
-                                else
-                                {
-                                    <a class="nav-link @menuRequisicao" asp-controller="Requisicao" asp-action="Index"
-                                asp-route-id="@usuarioLog.Id">Requisições</a>
-                                }
-
+                                        }
+                                        <li><a class="dropdown-item " asp-controller="Requisicao"
+                                            asp-action="Index" asp-route-id="">Historico</a></li>
+                                    </ul>
+                                </div>
                             </li>
                         }
                     </div>
