--- a/Views/Requisicao/IndexRel.cshtml
+++ b/Views/Requisicao/IndexRel.cshtml
@@ -37,7 +37,7 @@
             @foreach (var requisicao in Model)
             {
                 <tr>
-                    <td>@("IDMRQ" + requisicao.IdRequisicao.ToString("D2"))</td>
+                    <td><b>@("IDMRQ" + requisicao.IdRequisicao.ToString("D2"))</b></td>
                     <td>@requisicao.DataRequisicao</td>
                     <td>@requisicao.ProdutoName.ResumoName()</td>
                     <td>@requisicao.Quantidade</td>
