--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                         @if (!User.IsInRole("administrador"))
                                         {
-                                            <a class="dropdown-item @opRequisicao" asp-controller="Requisicao"
+                                            <a class="dropdown-item "@* @opRequisicao *@ asp-controller="Requisicao"
                                         asp-action="Index" asp-route-id="@usuarioLog.Id">Requisições</a>
                                         }
 
