--- a/Views/Shared/_LoginLogoutLinkPartial.cshtml
+++ b/Views/Shared/_LoginLogoutLinkPartial.cshtml
@@ -5,7 +5,7 @@
 @if (Context.User.Identity.IsAuthenticated)
 {
     var usuario = await _userManager.GetUserAsync(Context.User);
-    <a href="#" class="nav-link text-black"><b>  @usuario.NomeCompleto.PrimeiraPalavra().ToUpper()</b></a>
+    <a asp-controller="usuario" asp-action="perfil" asp-route-id="@usuario.Id" class="nav-link text-black"><b>  @usuario.NomeCompleto.PrimeiraPalavra().ToUpper()</b></a>
     <a class="nav-link pe-0 navbar-dark botaoLog" asp-controller="Usuario" asp-action="Logout">Sair</a>
 }
 else
