--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -47,7 +47,7 @@
                 
 
                 <tr>
-                    <td>@usuario.NomeCompleto</td>
+                    <td><a class="text-decoration-none" asp-action="perfil" asp-route-id="@usuario.Id"><b>@usuario.NomeCompleto</b></a></td>
                     <td>@usuario.Idade</td>
                     <td>@usuario.Email</td>
                     <td>@usuario.PhoneNumber</td>
