--- a/Views/Usuario/Perfil.cshtml
+++ b/Views/Usuario/Perfil.cshtml
@@ -25,6 +25,6 @@
 </div>
 
 <div class="mt-3">
-    <a asp-action="Index" class="btn btn-light">Voltar</a>
-    
+    <a asp-action="Index" class="btn btn-light"><i class="bi-arrow-left">Voltar</i></a>
+    <a class="btn btn-primary" asp-controller="Requisicao" asp-action="Index" asp-route-id="@Model.Id">Requisições</a>
 </div>
