--- a/Views/Requisicao/Index.cshtml
+++ b/Views/Requisicao/Index.cshtml
@@ -40,7 +40,7 @@
                     <td>@requisicao.ProdutoName.ResumoName()</td>
                     <td>@requisicao.Quantidade</td>
                     <td>@requisicao.ValorTotal.ToString("C2", CultureInfo.CreateSpecificCulture("pt-PT")) </td>
-                    <td><a class="text-decoration-none" asp-action="perfil" asp-route-id="@usuario.Id"><b>@requisicao.ColabName</b></a></td>
+                    <td><a class="text-decoration-none" asp-controller="Usuario" asp-action="perfil" asp-route-id="@usuario.Id"><b>@requisicao.ColabName</b></a></td>
 
                     @if (requisicao.EstadoReq == Estado.Aprovado)
                     {
@@ -66,6 +66,7 @@
                         {
                             <a asp-action="Excluir" asp-route-id="@requisicao.IdRequisicao" class="btn btn-sm btn-danger"><i
                         class="bi-trash" title="Canselar"></i></a>
+                        }
                     </td>
                 </tr>
             }
